fixed bug where navbar would disappear when screen was too small

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -135,3 +135,10 @@ button {
 #logout {
     font-family: 'Orbit', sans-serif;
 }
+
+
+@media screen and (max-width: 992px) {
+    nav {
+        text-align: center;
+    }
+}
